<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SendMessageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/msgTextEdit"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:autoLink="none"
            android:ems="10"
            android:hint="@string/msg_text_hint"
            android:inputType="textMultiLine"
            android:padding="5dp" />

        <Button
            android:id="@+id/buttonSendTextMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onSendTextMessage"
            android:text="@string/send_message" />

        <Button
            android:id="@+id/buttonSendOkMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="40dp"
            android:onClick="onSendOkMessage"
            android:text="@string/ok_message" />

        <Button
            android:id="@+id/buttonSendHelpMeMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="40dp"
            android:onClick="onSendHelpMeMessage"
            android:text="@string/help_me_message" />

        <Button
            android:id="@+id/buttonSendFoundMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="40dp"
            android:onClick="onSendFoundMessage"
            android:text="@string/found_message" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>